Fix for extra padding on groups

--- a/src/media/css/site.styl
+++ b/src/media/css/site.styl
@@ -137,6 +137,7 @@ span.label {
 
 section.group {
     overflow: hidden;
+    padding: 0;
 
     h1, h2, h3 {
         background: $refreshing-white;
